--- a/CVW1L1.ipynb
+++ b/CVW1L1.ipynb
@@ -86,7 +86,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "CzYxEhQU04BK",
         "outputId": "29f2e97d-53c3-4aa5-9be8-94eb3c1a5248"
@@ -132,7 +133,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "v-KbRKWu190c",
         "outputId": "e84890e5-ae5c-448f-c18e-720a8376e95d"
@@ -201,7 +203,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "e-Dqr4iK7QA3",
         "outputId": "55ab6ffe-d041-482e-902d-05f886c1c475"
@@ -253,7 +256,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "KoBby5Gh8D62",
         "outputId": "606f031d-e0cb-462a-e2aa-8cff9c28a885"
@@ -312,7 +316,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "8FZzAJNs92Id",
         "outputId": "56babb3e-039d-4667-e8e1-e13b1e7a0c14"
@@ -1070,7 +1075,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "KkKD4qkkD1T8",
         "outputId": "b2b090e5-3efd-4ddb-eabe-d825fb9a50f5"
